namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-cell-sharing-risk-assessment-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "hmpps-cell-sharing-risk-assessment-preprod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "move-a-prisoner-digital"
    cloud-platform.justice.gov.uk/application: "HMPPS Cell sharing risk assessment"
    cloud-platform.justice.gov.uk/owner: "Move a Prisoner Squad A: moveaprisonersquada@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-cell-sharing-risk-assessment-api,https://github.com/ministryofjustice/hmpps-cell-sharing-risk-assessment-ui"
    cloud-platform.justice.gov.uk/team-name: "move-a-prisoner"
    cloud-platform.justice.gov.uk/review-after: ""
